refactor : fix many warnings